2009-04-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Ide.cs:
	* MonoDevelop.Ide.Gui/Workbench.cs:
	* MonoDevelop.Ide.Commands/FileCommands.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.TipOfTheDayWindow.cs:
	  Worked on recent open.

2009-04-16  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui.Pads/MonodocTreePad.cs: Use new
	  Node.PublicUrl property when possible (Mono 2.6+).

2009-04-16  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/Ide.cs: Add an OpenFiles method.

	* MonoDevelop.Ide.Gui/IdeStartup.cs: Avoid unnecessary
	  SplashScreen creation.

2009-04-16  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/IdeStartup.cs: Don't show the splash
	  screen on Mac, so that we get the dock "bounce" while it
	  starts up. Force platform services to initialise ASAP, right
	  after the runtime, so that the Mac platform can subscribe to
	  file-open events. When splash screen isn't shown, use a
	  console progress monitor instead.

2009-04-16  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/DocumentSwitcher.cs: Present the parent
	  window is after switching, since some windows managers
	  (Mac!) may not restore focus automatically.

	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs:
	* MonoDevelop.Ide.Commands/WindowCommands.cs: Use Mac command
	  key for numbered tab switching.

2009-04-16  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/IdeStartup.cs: Remove the www prexfix
	  from the MD homepage URL.Thanks to Grzegorz Sobanski for the
	  patch.

2009-04-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/EditTemplateDialog.cs:
	* gtk-gui/MonoDevelop.Ide.CodeTemplates.EditTemplateDialog.cs:
	  Worked on edit template dialog.

	* gtk-gui/gui.stetic:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.TipOfTheDayWindow.cs: 

2009-04-16  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: